# reminder

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 21faa2667d11_init.py  4ef104ec5be6_initial.py  a1b2c3d4e5f6_add_persistent_reminder_fields.py  a1b2c3d4e5f6_add_user_name_timezone_and_refresh_tokens.py
nginx/: reminder.conf
reminder/: database.py  enums.py  logging.py
reminder/api/: app.py  dependencies.py  settings.py
reminder/api/middleware/: logging.py
reminder/api/routers/: __init__.py  auth.py  events.py  history.py  users.py
reminder/api/schemas/: auth.py  events.py  history.py  users.py
reminder/models/: event.py  event_history.py  refresh_token.py  user.py
reminder/repositories/: base.py  event_history_repository.py  event_repository.py  refresh_token_repository.py  user_repository.py
reminder/services/: auth_service.py  event_history_service.py  event_service.py  user_service.py
reminder/utils/: recurrence.py
reminder/worker/: email.py  main.py  settings.py  tasks.py
reminder/worker/templates/: reminder_email.html
static/: Reminder.html  ember-api.js  ember-app.js  ember.css
tests/: conftest.py  test_event_history_service.py  test_event_service.py  test_recurrence.py
